--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football Site</title>
     <!-- Font Awesome Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      referrerpolicy="no-referrer"
+    />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <!-- Hero Section Start -->
+      <section class="hero flex">
+        <div class="w-50">
+          <h1>Conmebol Copa America 2021</h1>
+          <button>Watch Live <i class="fas fa-arrow-right"></i></button>
+        </div>
+        <div class="w-50">
+          <img src="img/banner.png" alt="" />
+        </div>
+      </section>
+      <!-- Hero Section End -->
+    </header>
+  </body>
 </html>
