players section done

--- a/index.html
+++ b/index.html
@@ -28,5 +28,155 @@
       </section>
       <!-- Hero Section End -->
     </header>
+    <main class="container">
+      <!-- Players Section Start -->
+      <section class="players">
+        <div class="player">
+          <div class="img">
+            <img src="img/players/ronaldo.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Christiano Ronaldo</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/messi.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Lionel Messi</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/neymar.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Neymar Junior</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/salah.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Mohammad Salah</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/mbappe.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Kylian Mbappe</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/debruyne.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Kevin Debruyne</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/coutinho.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Phillipe Coutinho</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/dybala.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Paulo Dybala</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/icardi.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Mauro Icardi</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/dimaria.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Angel Dimaria</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/kane.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Harry Kane</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+        <div class="player">
+          <div class="img">
+            <img src="img/players/ozil.png" alt="" />
+          </div>
+          <div class="information">
+            <h3>Mesut Ozil</h3>
+            <p>
+              This is the best player in the world no one can be compared with
+              him. He is the best goalscorer and the best playmaker in the world
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Players Section Ending -->
+    </main>
   </body>
 </html>
