footer section completed

--- a/index.html
+++ b/index.html
@@ -178,5 +178,23 @@
       </section>
       <!-- Players Section Ending -->
     </main>
+    <!-- Footer Start -->
+    <footer>
+      <div class="footer-img">
+        <img src="img/Logo.png" alt="" />
+      </div>
+      <div class="footer-details">
+        <div class="icons">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-dribbble"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+        <div class="copyright">
+          <span>Copyright &copy; 2022 Football</span>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
   </body>
 </html>
