--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1>Conmebol Copa America 2021</h1>
           <button>Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
-        <div class="w-50">
+        <div class="w-50 hero-img">
           <img src="img/banner.png" alt="" />
         </div>
       </section>
@@ -192,8 +192,8 @@
       </section>
       <!-- Players Section Ending -->
       <!-- Pricing Secion Start -->
-      <section class="pricing">
-        <h3>Buy Our Packages To Watch Football Live</h3>
+      <div class="pricing">
+        <h3>Buy Our Package To Watch Football Live</h3>
         <div class="cards">
           <div class="card">
             <h4>Basic $5/ <span>month</span></h4>
@@ -220,8 +220,16 @@
             <button>Buy Now <i class="fas fa-arrow-right"></i></button>
           </div>
         </div>
-      </section>
+      </div>
       <!-- Pricing Secion End -->
+      <!-- News Letter Section Start -->
+      <div class="news-letter">
+        <h4>
+          Want To Know Updates About Football? Click <a href="#">Here</a> To
+          Activate It
+        </h4>
+      </div>
+      <!-- News Letter Section Ending -->
     </main>
     <!-- Footer Start -->
     <footer>
