--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
